src/objects/SBQQ__ErrorCondition__c.object
<CustomObject>
    <customHelpPage>SBQQ__ErrorConditionHelp</customHelpPage>
    <description>Error condition that causes parent Product Rule to fail.</description>
    <fields>
        <fullName>SBQQ__FilterType__c</fullName>
        <description>Type of filtering used in this condition.</description>
        <inlineHelpText>Choose Variable to evaluate this rule against a Summary Variable; otherwise, choose Value.</inlineHelpText>
        <label>Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Variable</fullName>
                </value>
                <value>
                    <fullName>Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FilterValue__c</fullName>
        <description>The value you want the tested variable to be evaluated against.</description>
        <inlineHelpText>Enter the value you want the tested variable to be evaluated against.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__FilterVariable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The selected summary variable this rule evaluates.</description>
        <inlineHelpText>Choose the summary variable you want this rule to evaluate.</inlineHelpText>
        <label>Filter Variable</label>
        <referenceTo>SBQQ__SummaryVariable__c</referenceTo>
        <relationshipLabel>Error Conditions (Filter Variable)</relationshipLabel>
        <relationshipName>FilteredConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Index__c</fullName>
        <description>Assign an unique number to this Condition to reference it in the Product Rule&apos;s Advanced Condition.</description>
        <inlineHelpText>Assign an unique number to this Condition to reference it in the Product Rule&apos;s Advanced Condition.</inlineHelpText>
        <label>Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Operator__c</fullName>
        <description>The operator used when evaluating the tested selection.</description>
        <inlineHelpText>Choose the operator to use when evaluating your tested selection.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ParentRuleIsActive__c</fullName>
        <formula>SBQQ__Rule__r.SBQQ__Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentRuleIsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RuleTargetsQuote__c</fullName>
        <formula>ISPICKVAL(SBQQ__Rule__r.SBQQ__Scope__c, &apos;Quote&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RuleTargetsQuote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Rule__c</fullName>
        <description>Parent rule for this condition.</description>
        <inlineHelpText>Parent rule for this condition (that runs this condition).</inlineHelpText>
        <label>Rule</label>
        <referenceTo>SBQQ__ProductRule__c</referenceTo>
        <relationshipLabel>Error Conditions</relationshipLabel>
        <relationshipName>ErrorConditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__TestedAttribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to identify the specific attribute if the Tested Field is a global Configuration Attribute field.</description>
        <inlineHelpText>Used to identify the specific attribute if the Tested Field is a global Configuration Attribute field.</inlineHelpText>
        <label>Tested Attribute</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__TestedField__c</field>
                <operation>equals</operation>
                <valueField>SBQQ__ProductAttribute__c.SBQQ__Attribute__r.SBQQ__TargetField__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProductAttribute__c</referenceTo>
        <relationshipLabel>Error Conditions</relationshipLabel>
        <relationshipName>ErrorConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TestedField__c</fullName>
        <description>Field on the Quote object that should be used in testing this condition.</description>
        <inlineHelpText>Field on the Quote object that should be used in testing this condition.</inlineHelpText>
        <label>Tested Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__TestedObject__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Group Line Items</fullName>
                </value>
                <value>
                    <fullName>Unit Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TestedObject__c</fullName>
        <description>Object that contains the field being tested by this condition.</description>
        <inlineHelpText>Specify the object that contains the tested field.</inlineHelpText>
        <label>Tested Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Quote Line</fullName>
                </value>
                <value>
                    <fullName>Quote Line Group</fullName>
                </value>
                <value>
                    <fullName>Product Option</fullName>
                </value>
                <value>
                    <fullName>Configuration Attributes</fullName>
                </value>
                <value>
                    <fullName>Upgraded Asset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TestedVariable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Summary Variable in which this rule will be evaluated.</description>
        <inlineHelpText>Select the Summary Variable you want this rule to evaluate.</inlineHelpText>
        <label>Tested Variable</label>
        <referenceTo>SBQQ__SummaryVariable__c</referenceTo>
        <relationshipLabel>Error Conditions (Tested Variable)</relationshipLabel>
        <relationshipName>TestedConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Error Condition</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Condition #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SBQQ__FilterCombinationValidation</fullName>
        <active>true</active>
        <description>Validation for the combination of Filter Type Variable.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__FilterType__c, &quot;Variable&quot;), ISBLANK(SBQQ__FilterVariable__c))</errorConditionFormula>
        <errorMessage>A Filter Type of &apos;Variable&apos; must have a Filter Variable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__ScopeAndErrorConditionTestedObject</fullName>
        <active>true</active>
        <description>Validation for the combination of Product Scope and Tested Object.</description>
        <errorConditionFormula>OR(AND(ISPICKVAL(SBQQ__Rule__r.SBQQ__Scope__c,&quot;Quote&quot;),OR(ISPICKVAL(SBQQ__TestedObject__c, &quot;Product Option&quot;),ISPICKVAL(SBQQ__TestedObject__c, &quot;Configuration Attributes&quot;))),AND(ISPICKVAL(SBQQ__Rule__r.SBQQ__Scope__c,&quot;Product&quot;),OR(ISPICKVAL(SBQQ__TestedObject__c, &quot;Quote Line&quot;),ISPICKVAL(SBQQ__TestedObject__c, &quot;Quote Line Group&quot;))))</errorConditionFormula>
        <errorMessage>This combination of Product Scope and Tested Object is not valid.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Tested_attr_required_if_global_field</fullName>
        <active>true</active>
        <description>Tested Attribute required since the Tested Field is a global Configuration Attribute field.</description>
        <errorConditionFormula>IF(TEXT(SBQQ__TestedObject__c) == &apos;Configuration Attributes&apos; &amp;&amp; CONTAINS(TEXT(SBQQ__TestedField__c), &apos;.&apos;) &amp;&amp; SBQQ__TestedAttribute__c == &apos;&apos;, true, false)</errorConditionFormula>
        <errorMessage>Tested Attribute required since the Tested Field is a global Configuration Attribute field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Tested_field_or_variable_required</fullName>
        <active>true</active>
        <description>Requires that either Tested Variable or Tested Field be specified.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__TestedField__c,&quot;&quot;),ISBLANK(SBQQ__TestedVariable__c))</errorConditionFormula>
        <errorMessage>You must specify either Tested Field or Tested Variable.</errorMessage>
    </validationRules>
</CustomObject>